syntax = "proto3";

package chatbotpb;

// EmptyCommand - empty command
message EmptyCommand {
    // cmd
    string cmd = 1;
}